# shengji-backend

./: Dockerfile  TODO.txt  sj-backend_compose.yaml
py_client/: client_send_receive.py
py_socketio_server/: Dockerfile  TSQueue.py  app_server_connect.py  server.py  serverasiotest.py  sjbackend_middleman.py
src/: AcceptedSocket.cpp  AcceptedSocket.h  CMakeLists.txt  Card-test.cpp  Card.cpp  Card.h  Chat.cpp  Chat.h  Connection.cpp  Connection.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Match.cpp  Match.h  Play.cpp  Play.h  Player.cpp  Player.h  S2CMessages.cpp  S2CMessages.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  ShengJi.cpp  ShengJi.h  SocketManager.cpp  SocketManager.h  SocketServer.cpp  SocketServer.h  WebsocketServer.cpp  WebsocketServer.h  common.cpp  common.h  main.cpp
